main_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: main-application
  name: hashlogger-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashlogger
  template:
    metadata:
      labels:
        app: hashlogger
    spec:
      volumes: # Define volumes
        - name: shared-hash
          persistentVolumeClaim:
            claimName: hashlogger-claim
        - name: envs
          configMap:
            name: main-app-configmap

      containers: # Define containers
        - name: hashlogger-backend
          image: pavelgar/hashlogger-backend:latest
          volumeMounts: # Mount volumes
            - name: shared-hash
              mountPath: /usr/src/app/files

        - name: hashlogger-frontend
          image: pavelgar/hashlogger-frontend:latest
          volumeMounts: # Mount volumes
            - name: shared-hash
              mountPath: /usr/src/app/files
            - name: envs
              mountPath: /usr/src/app
              readOnly: true
