main_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashlogger-svc
spec:
  type: ClusterIP
  selector:
    app: hashlogger
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
