main_app/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: main-application
  name: hashlogger-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hashlogger-svc
          servicePort: 2345
      - path: /pingpong
        backend:
          serviceName: ping-svc
          servicePort: 80
